Set up basic pages
Added style.css and linked them up and threw some stuff in there

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<h1>Who that, who that? That do that, do that?</h1>
-<p>Dunno tbh</p>
+<!DOCTYPE HTML>
+
+<!-- HTML Document -->
+
+<head>
+  <title>Michael Melniks Website!</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <meta charset = "UTF-8" />
+</head>
+
+<body>
+	<div id="container">
+		<p>Fairly Odd Parents has really gone down hill. Next review tomorrow at 4pm!</p>
+	</div>
+</body>
